- tweak: websocket think

--- a/public/index.html
+++ b/public/index.html
@@ -1,195 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MP3 to DFPWM Converter</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f7fc;
-      color: #333;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      text-align: center;
-      color: #333;
-    }
-    header {
-      background-color: #4CAF50;
-      padding: 20px;
-      color: white;
-      text-align: center;
-    }
-    form {
-      max-width: 500px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: bold;
-    }
-    input[type="text"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 100%;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .status {
-      text-align: center;
-      font-size: 18px;
-      color: #555;
-    }
-    .file-list {
-      list-style: none;
-      padding: 0;
-      max-width: 500px;
-      margin: 0 auto;
-    }
-    .file-list li {
-      margin: 10px 0;
-      text-align: center;
-    }
-    .file-list button {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .file-list button:hover {
-      background-color: #0056b3;
-    }
-    .clear-btn {
-      background-color: #dc3545;
-      margin-top: 20px;
-      display: block;
-      width: 100%;
-    }
-    .clear-btn:hover {
-      background-color: #c82333;
-    }
-    .binContainer {
-      max-width: 500px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <script src='main.js'></script>
 </head>
 <body>
-  <header>
-    <h1>Convert MP3 to DFPWM</h1>
-  </header>
-
-  <div id="binContainer">
-    <h2>Control Pastebin URL: </h2>
-    <p id="pastebinUrl" style="text-align: center; font-size: 16px; font-style: italic;">
-  </div>
-
-  <!-- Form to submit MP3 URL -->
-  <form id="convertForm">
-    <label for="mp3Url">MP3 URL:</label>
-    <input type="text" id="mp3Url" name="mp3Url" required placeholder="Enter MP3 URL">
-    <button type="submit">Convert</button>
-  </form>
-
-  <p id="status" class="status"></p>
-
-  <h2>Converted Files</h2>
-  <ul id="fileList" class="file-list"></ul>
-
-  <script>
-    const form = document.getElementById('convertForm');
-    const status = document.getElementById('status');
-    const fileList = document.getElementById('fileList');
-    const pastebinUrl = document.getElementById("pastebinUrl");
-    pastebinUrl.textContent = `pastebin run wkv0km9T ${window.location.href}control`;
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      status.textContent = 'Converting...';
-
-      const mp3Url = document.getElementById('mp3Url').value;
-      const response = await fetch('/convert', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ mp3Url })
-      });
-
-      const result = await response.json();
-      status.textContent = result.message || 'Conversion failed';
-      loadFiles();  // Reload the file list after conversion
-    });
-
-    // Function to load the file list dynamically without reloading the page
-    async function loadFiles() {
-      const response = await fetch('/files');
-      const files = await response.json();
-
-      fileList.innerHTML = files.map(file => 
-        `<li>
-          <button onclick="downloadFile('${file.name}')">Set sound ${file.name}</button>
-        </li>`
-      ).join('');
-      fileList.innerHTML += `<li><button class="clear-btn" onclick="clearFiles()">Clear</button></li>`;
-    }
-
-    // Handle file download without page reload
-    function downloadFile(fileName) {
-      fetch(`/control?path=${window.location.href}converted_files/${fileName}`)
-        .then(response => response.text())
-        .then(data => {
-          // You can handle the response here if needed, such as showing a message.
-          alert(`Command set!.`);
-        })
-        .catch(error => {
-          console.error('Error command', error);
-          alert('There was an error set command.');
-        });
-    }
-
-    // Handle clearing files without page reload
-    function clearFiles() {
-      fetch(`${window.location.href}control?clear=true`)
-        .then(response => response.text())
-        .then(() => {
-          alert('Sound command clear');
-          loadFiles();  // Reload the file list
-        })
-        .catch(error => {
-          console.error('Error clearing command:', error);
-          alert('There was an error clearing the command.');
-        });
-    }
-
-    // Load the file list on page load
-    loadFiles();
-  </script>
+  
 </body>
 </html>
