--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,13 @@
     <button id="clearButton" onclick="clearClicked()">Clear!</button>
     <h3 id="message"></h3>
     <h3 id="uri"></h3>
+    <button id="cpbtn">Copy</button>
   </div>
   <script>
     const message = document.getElementById("uri");
+    const cpbtn = document.getElementById("cpbtn");
     message.innerText = "wget run " + window.location.href + "scripts/ws.lua ws://" + window.location.host ;
+    cpbtn.onclick = (e)=> copy(message.innerText);
   </script>
 </body>
 </html>
